<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.081"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/youtubers_name" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/photo"
                app:layout_constraintTop_toTopOf="@+id/photo">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/born"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvBorn"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        tools:text="1934" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/subscriber"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_youtube" />

                    <TextView
                        android:id="@+id/tvSubscriber"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        tools:text="123909" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/genre"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvGenre"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        tools:text="Comedy, Game" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo"
                app:layout_constraintVertical_bias="0.044"
                tools:text="@string/description" />

            <Button
                android:id="@+id/action_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDesc"
                app:layout_constraintVertical_bias="0.058" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>